libs/pavex_cli/tests/ui_tests/output_parameter_cannot_be_handled/expectations/stderr.txt
Error: 
  × I do not know how to handle the type returned by `app::c`.
    ╭─[src/lib.rs:8:1]
  8 │     let mut bp = AppBlueprint::new();
  9 │     bp.route(f!(crate::c), "/home");
    ·              ──────┬─────
    ·                    ╰── The handler was registered here
 10 │     bp
    ╰────

Error: 
  × 
   ╭─[src/lib.rs:2:1]
 2 │ 
 3 │ pub fn c() -> (usize, usize) {
   ·               ───────┬──────
   ·                      ╰── The output type that I cannot handle
 4 │     todo!()
   ╰────